[metadata]
name = ggmax-sampler
version = attr: ggmax_sampler.__version__
description = An efficient algorithm for sampling the shear-modulus reduction curve
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Simon Chabot
author_email = chabotsi-ggmax@chabotsi.fr
url = https://github.com/chabotsi/ggmax-sampler
license = MIT License
classifiers =
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
py_modules = ggmax_sampler
python_requires = >= 3.7
install_requires =
    numpy
